@@ -1,5 +1,9 @@
 1948.	[bug]		If was possible to trigger a REQUIRE failure in
 			xfrin.c:maybe_free() if named ran out of memory.
+1950.	[port]		Solaris 2.5.1 and earlier cannot bind() then connect()
+			a TCP socket. This prevents the source address being
+			set for TCP connections. [RT #15628]
+
 			[RT #15568]
 
 1946.	[bug]		resume_dslookup() could trigger a REQUIRE failure
